--- a/.gitignore
+++ b/.gitignore
@@ -6,13 +6,13 @@
 *.bak
 *.bck
 *.kicad_pcb-bak
-*.sch-bak
 *~
 _autosave-*
 *.tmp
 *-save.pro
 *-save.kicad_pcb
 fp-info-cache
+*-backups
 
 # Netlist files (exported from Eeschema)
 *.net
@@ -24,3 +24,6 @@ fp-info-cache
 # Exported BOM files
 *.xml
 *.csv
+
+*.DS_Store
+*.kicad_prl
